--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
     sdk: flutter
   permission_handler: ^11.0.1
   material: ^1.0.0+2
+  liquid_swipe: ^3.1.0
+  smooth_page_indicator: ^1.1.0
 
 
 dev_dependencies:
