--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   material: ^1.0.0+2
   liquid_swipe: ^3.1.0
   smooth_page_indicator: ^1.1.0
+  url_launcher: ^6.1.14
 
 
 dev_dependencies:
