--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   liquid_swipe: ^3.1.0
   smooth_page_indicator: ^1.1.0
   url_launcher: ^6.1.14
+  url_launcher_android: ^6.1.0
 
 
 dev_dependencies:
