--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   smooth_page_indicator: ^1.1.0
   url_launcher: ^6.1.14
   url_launcher_android: ^6.1.0
+  firebase_core: ^2.17.0
 
 
 dev_dependencies:
