--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   url_launcher: ^6.1.14
   url_launcher_android: ^6.1.0
   firebase_core: ^2.17.0
+  cloud_firestore: ^4.9.3
+  
 
 
 dev_dependencies:
